feat: Add RainfallController

--- a/RainfallApi/RainfallApi.csproj
+++ b/RainfallApi/RainfallApi.csproj
@@ -8,8 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Refit" Version="7.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RainfallApi.Client\RainfallApi.Client.csproj" />
     </ItemGroup>
 
 </Project>
