refactor: Use AddRefitClient and add config for external APIs
- Added configuration for ApiUrls:RainfallApi for the base address of the external API
- Removed the use of the factory and use AddRefitClient

--- a/RainfallApi/appsettings.json
+++ b/RainfallApi/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiUrls": {
+    "RainfallApi": "https://environment.data.gov.uk/flood-monitoring"
+  },
   "AllowedHosts": "*",
   "Kestrel": {
     "Endpoints": {
