--- a/RainfallApi/appsettings.Development.json
+++ b/RainfallApi/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiUrls": {
+    "RainfallApi": "https://environment.data.gov.uk/flood-monitoring"
+  },
   "Kestrel": {
     "Endpoints": {
       "Https": {
