--- a/RainfallApi.Tests/RainfallApi.Tests.csproj
+++ b/RainfallApi.Tests/RainfallApi.Tests.csproj
@@ -13,11 +13,13 @@
         <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.18.1" />
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="FluentAssertions.OneOf" Version="0.0.6-beta01" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="NSubstitute" Version="5.1.0" />
         <PackageReference Include="NUnit" Version="3.14.0" />
         <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+        <PackageReference Include="OneOf" Version="3.0.263" />
     </ItemGroup>
 
     <ItemGroup>
