--- a/RainfallApi.Tests/RainfallApi.Tests.csproj
+++ b/RainfallApi.Tests/RainfallApi.Tests.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="FluentAssertions.OneOf" Version="0.0.6-beta01" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.4" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="NSubstitute" Version="5.1.0" />
         <PackageReference Include="NUnit" Version="3.14.0" />
