feat: Add middleware and integration test for enforcing correct port
- Added EnforcePortMiddleware to enforce the correct port
- Change appsettings Kestrel's url to use localhost so it can be used as a configuration

--- a/RainfallApi/appsettings.Development.json
+++ b/RainfallApi/appsettings.Development.json
@@ -11,7 +11,7 @@
   "Kestrel": {
     "Endpoints": {
       "Https": {
-        "Url": "https://*:3000"
+        "Url": "https://localhost:3000"
       }
     }
   }
