--- a/RainfallApi/appsettings.json
+++ b/RainfallApi/appsettings.json
@@ -12,7 +12,7 @@
   "Kestrel": {
     "Endpoints": {
       "Https": {
-        "Url": "https://*:3000"
+        "Url": "https://localhost:3000"
       }
     }
   }
